# NICP

./: .gitignore  README.md  environment.yaml  install.sh  install2.sh  segms_16.npy  setup.cfg
conf_test/: default.yaml  default_err.yaml  default_match.yaml
demo/partial_PC/: pc.ply
demo_guess_rot/scape_004/: scape_004.ply
src/lvd_templ/: _version.py  paths.py
src/lvd_templ/data/: datamodule_AMASS.py  dataset_AMASS_occ.py
src/lvd_templ/evaluation/: evaluation_benchmark.py  get_error.py  get_match.py  stream_demo.py  train_challenge.txt  utils.py
src/lvd_templ/modules/: module.py
src/lvd_templ/pl_modules/: pl_module_ifnet.py
training/: README.md  environment.yaml  multirun.yaml  setup.cfg
training/conf_ifnet/: default.yaml
training/conf_ifnet/nn/: default.yaml
training/conf_ifnet/train/: default.yaml
training/data/: preprocess_lib_vox.py
training/data_preprocessing/: README.md  conda-env.yaml  config.toml  prepare_data_corr.py  preprocess_lib_vox_pt.py
training/data_preprocessing/CAPE_example/: convert_cape_to_amass.py  preprocess_lib_vox_pt_cape.py
training/data_preprocessing/utils/: cfg.py  voxels.py
training/data_preprocessing/utils/libmesh/: setup.py
training/data_preprocessing/utils/libvoxelize/: setup.py
training/src/lvd_templ/: run.py
training/src/lvd_templ/data/: datamodule_AMASS.py  dataset_AMASS_occ.py
training/src/lvd_templ/modules/: module.py
training/src/lvd_templ/pl_modules/: pl_module_ifnet.py
training/src/lvd_templ/ui/: run.py
