[metadata]
name = lvd_templ
description = lvd_templ
url = https://github.com/riccardomarin/NICP
author = RicMar
author_email = rmarinvr@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core ==0.1.1

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning ==1.5.10
    hydra-core ==1.3.2
    wandb ==0.15.2
    streamlit ==1.22.0
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
